--- a/global.css
+++ b/global.css
@@ -18,6 +18,7 @@ html {
 }
 
 body {
+    max-width: 100vw;
     background-color: #FFFFFF; /*fallback for IE*/
     background-color: var(--bg-color);
     margin: 0;
